add: work-data_code, minor edits

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ body {
 
 .relocate-item {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     margin: 20px 20px 0 0;
 }
 
@@ -727,12 +727,14 @@ blockquote {
         flex-basis: 100%;
         flex-wrap: wrap;
     }
+
     .first-skills {
         display: flex;
         width: 50%;
         align-items: baseline;
         flex-basis: 50%;
     }
+
     .plus {
         display: flex;
         color: #FFBB01;
@@ -740,6 +742,7 @@ blockquote {
         font-weight: 700;
         flex-wrap: wrap;
     }
+
     .other-skills {
         width: 290px;
         display: flex;
@@ -756,35 +759,44 @@ blockquote {
         align-items: center;
         flex-direction: column;
     }
+
     .hero-header {
         margin-bottom: 10px;
     }
+
     .hero-avatar {
         order: 0;
         margin-bottom: 17px;
     }
+
     .hero-text {
         order: 1;
         text-align: center;
     }
+
     .contacts-block {
         flex-direction: column;
         align-items: flex-start;
     }
+
     .contacts-form {
         margin-bottom: 58px;
     }
+
     .flex-cont {
         justify-content: center;
         flex-basis: 100%;
         flex-wrap: wrap;
     }
+
     .first-skills {
         flex-basis: 100%;
     }
+
     .plus {
         flex-wrap: wrap;
     }
+
     .other-skills {
         flex-wrap: wrap;
         margin-left: 40px;
@@ -795,13 +807,16 @@ blockquote {
     .card-title {
         min-height: 0px;
     }
+
     .section-title {
         font-size: 25px;
         margin-bottom: 20px;
     }
+
     .text-block:hover {
         height: 250px;
     }
+
     .card {
         background: #fff;
         box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
@@ -813,25 +828,31 @@ blockquote {
         display: flex;
         flex-direction: column;
     }
+
     .work-process-item {
         flex-basis: 96%;
     }
+
     .work-process-item-double {
         flex-direction: column;
     }
+
     .work-process-item:not(:last-child):after {
         top: calc(50% - -49.5%);
         transform: rotate(90deg);
         right: calc(50% - 18px);
     }
+
     .filter-btn {
         margin-right: 0px;
         font-size: 14px;
         min-width: 90px;
     }
+
     .filter-btn.active {
         min-width: 90px;
     }
+
     .blockquote_ul {
         padding-left: 0px;
     }
@@ -841,97 +862,123 @@ blockquote {
     .hero {
         padding-bottom: 50px;
     }
+
     .hero-avatar {
         width: 113px;
         height: 113px;
         border: 3px solid #FFBB01;
         background-position: center top -9px;
     }
+
     .hero-header {
         margin-bottom: 38px;
     }
+
     .hero-title {
         font-size: 25px;
         line-height: 28px;
         margin-bottom: 4px;
     }
+
     .hero-discription {
         font-size: 14px;
         line-height: 140%;
         margin-bottom: 0;
     }
+
     .section {
         padding: 40px 0;
     }
+
     .hero-header-social {
         flex-direction: column;
     }
+
     .hero-header-social .contacts-link {
         margin-right: 0;
     }
+
     .hero-header-icons {
         margin-bottom: 13px;
     }
+
     .footer-social-links {
         margin-bottom: 30px;
     }
+
     .project-paragraph {
         max-width: 210px;
         font-size: 14px;
     }
+
     .contacts-form {
         padding: 40px 19px;
     }
+
     .form-title {
         font-size: 15px;
         line-height: 140%;
     }
+
     .contacts-phone,
     .contacts-mail {
         flex-basis: 100%;
         margin-bottom: 30px;
     }
+
     .contacts-title {
         font-size: 18px;
         line-height: 21px;
     }
+
     .contacts-data {
         margin-bottom: 0;
     }
+
     .contacts-link {
         font-size: 14px;
         line-height: 16px;
         margin-bottom: 13px;
     }
+
     blockquote p {
         font-size: 16px;
     }
+
     .my-cv {
         flex-basis: 100%;
         margin-top: 20px;
     }
+
     .contacts-police {
         margin-top: 50px;
     }
+
     .bar {
         font-size: 10px;
     }
+
     .skills {
         font-size: 14px;
     }
+
     .skills-project {
         margin: 0;
     }
+
     .plus p {
         margin: 0;
     }
+
     .other-skills {
         margin-left: 0;
         justify-content: space-around;
     }
+
     .back {
         justify-content: start;
     }
+
     .modal__block {
         background-color: #20202d;
         padding: 60px 30px 30px;
@@ -940,16 +987,20 @@ blockquote {
         position: relative;
         font-size: 12px;
     }
+
     .modal__block {
         font-size: 12px;
     }
+
     .text-block:hover {
         height: 190px;
     }
+
     .card {
         flex-basis: 58%;
         margin-left: 25%;
     }
+
     .card:hover {
         transform: none;
     }
@@ -959,6 +1010,7 @@ blockquote {
     .text-block:hover {
         height: 220px;
     }
+
     .card {
         flex-basis: 58%;
     }
@@ -968,12 +1020,15 @@ blockquote {
     .text-block:hover {
         height: 250px;
     }
+
     .card {
         flex-basis: 62%;
     }
+
     .relocate-item {
         margin: 0 auto;
     }
+
     .relocation-icon {
         margin-right: 6px;
     }
@@ -983,10 +1038,12 @@ blockquote {
     .text-block:hover {
         height: 290px;
     }
+
     .card {
         flex-basis: 100%;
         margin-left: 0;
     }
+
     .card-project-block {
         width: auto;
     }
