--- a/css/menu.css
+++ b/css/menu.css
@@ -92,21 +92,17 @@
 }
 
 .burger-menu_link {
-    padding: 15px 25px;
+    padding: 15px 20px;
     text-decoration: none;
     text-transform: uppercase;
     color: #000000;
     font-size: 16px;
-    border-bottom: 1px solid #fff;
-}
-
-.burger-menu_link:first-child {
-    border-top: 1px solid #fff;
 }
 
 .burger-menu_link:hover {
     filter: brightness(0.9);
     -webkit-filter: brightness(0.9);
+    border-left: 5px solid #fff;
 }
 
 .burger-menu_overlay {
@@ -125,13 +121,35 @@
 }
 
 .lang {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     margin-top: 40px;
 }
 
-.lang button {
-    cursor: pointer;
-    background: #fff;
+.lang_wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.lang_button {
+    width: 40px;
+    height: 40px;
+    font-size: 14px;
+    color: #000;
+    background-color: #fff;
     border: none;
-    padding: 7px;
+    border-radius: 50px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+}
+
+.lang_button:hover {
+    background-color: #20202d;
+    box-shadow: 0px 15px 20px rgba(29, 67, 52, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
 }
