--- a/css/style.css
+++ b/css/style.css
@@ -355,9 +355,14 @@ blockquote {
     cursor: pointer;
     color: #fff;
     background-color: transparent;
-    min-width: 120px;
+    min-width: 143px;
     margin-right: 20px;
     font-size: 20px;
+}
+
+.filter-btn:last-child,
+.filter-btn.active:last-child {
+    min-width: 232px;
 }
 
 .filter-btn:hover {
@@ -369,7 +374,7 @@ blockquote {
     color: #fff;
     border: 2px solid #FFBB01;
     border-radius: 25px;
-    min-width: 120px;
+    min-width: 143px;
 }
 
 .project-subtitle {
@@ -738,26 +743,21 @@ blockquote {
         align-items: center;
         flex-direction: column;
     }
-
     .hero-header {
         margin-bottom: 10px;
     }
-
     .hero-avatar {
         order: 0;
         margin-bottom: 17px;
     }
-
     .hero-text {
         order: 1;
         text-align: center;
     }
-
     .contacts-block {
         flex-direction: column;
         align-items: flex-start;
     }
-
     .contacts-form {
         margin-bottom: 58px;
     }
@@ -767,16 +767,13 @@ blockquote {
     .card-title {
         min-height: 0px;
     }
-
     .section-title {
         font-size: 25px;
         margin-bottom: 20px;
     }
-
     .text-block:hover {
         height: 250px;
     }
-
     .card {
         background: #fff;
         box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
@@ -792,42 +789,43 @@ blockquote {
         -ms-border-radius: 7px;
         -o-border-radius: 7px;
     }
-
     .card-project-image {
         height: 195px;
     }
-
     .card-project-block:hover .card-block {
         height: 195px;
         padding: 50px;
     }
-
     .work-process-item {
         flex-basis: 96%;
     }
-
     .work-process-item-double {
         flex-direction: column;
     }
-
     .work-process-item:not(:last-child):after {
         top: calc(50% - -49.5%);
         transform: rotate(90deg);
         right: calc(50% - 18px);
     }
-
     .filter-btn {
         margin-right: 0px;
         font-size: 14px;
         min-width: 90px;
     }
-
     .filter-btn.active {
         min-width: 90px;
     }
-
     .blockquote_ul {
         padding-left: 0px;
+    }
+    .filter-btn,
+    .filter-btn.active {
+        min-width: 110px;
+        min-height: 45px;
+    }
+    .filter-btn:last-child,
+    .filter-btn.active:last-child {
+        min-width: 175px;
     }
 }
 
@@ -835,110 +833,88 @@ blockquote {
     .hero {
         padding-bottom: 50px;
     }
-
     .hero-avatar {
         width: 113px;
         height: 113px;
         border: 3px solid #FFBB01;
         background-position: center top -9px;
     }
-
     .hero-header {
         margin-bottom: 38px;
     }
-
     .hero-title {
         font-size: 25px;
         line-height: 28px;
         margin-bottom: 4px;
     }
-
     .hero-discription {
         font-size: 14px;
         line-height: 140%;
         margin-bottom: 0;
     }
-
     .section {
         padding: 40px 0;
     }
-
     .hero-header-social {
         flex-direction: column;
     }
-
     .hero-header-social .contacts-link {
         margin-right: 0;
     }
-
     .hero-header-icons {
         margin-bottom: 13px;
     }
-
     .footer-social-links {
         margin-bottom: 30px;
+        order: 3;
     }
-
     .project-paragraph {
         max-width: 210px;
         font-size: 14px;
     }
-
     .contacts-form {
         padding: 40px 19px;
     }
-
     .form-title {
         font-size: 15px;
         line-height: 140%;
     }
-
     .contacts-phone,
     .contacts-mail {
-        flex-basis: 100%;
+        flex-basis: 46%;
         margin-bottom: 30px;
     }
-
     .contacts-title {
         font-size: 18px;
         line-height: 21px;
     }
-
     .contacts-data {
         margin-bottom: 0;
     }
-
     .contacts-link {
         font-size: 14px;
         line-height: 16px;
         margin-bottom: 13px;
     }
-
     blockquote p {
         font-size: 16px;
     }
-
     .my-cv {
         flex-basis: 100%;
         margin-top: 20px;
     }
-
     .contacts-police {
         margin-top: 50px;
     }
-
     .bar {
         font-size: 10px;
     }
-
     .skills {
         font-size: 14px;
     }
-
     .back {
         justify-content: start;
     }
-
     .modal__block {
         background-color: #20202d;
         padding: 60px 30px 30px;
@@ -947,20 +923,16 @@ blockquote {
         position: relative;
         font-size: 12px;
     }
-
     .modal__block {
         font-size: 12px;
     }
-
     .text-block:hover {
         height: 190px;
     }
-
     .card {
         flex-basis: 58%;
         margin-left: 25%;
     }
-
     .card:hover {
         transform: none;
     }
@@ -970,7 +942,6 @@ blockquote {
     .text-block:hover {
         height: 220px;
     }
-
     .card {
         flex-basis: 58%;
     }
@@ -980,11 +951,9 @@ blockquote {
     .text-block:hover {
         height: 250px;
     }
-
     .card {
         flex-basis: 62%;
     }
-
     .relocate-item {
         margin: 0 auto;
     }
@@ -994,23 +963,23 @@ blockquote {
     .text-block:hover {
         height: 290px;
     }
-
     .card {
         flex-basis: 100%;
         margin-left: 0;
     }
-
     .card-project-image {
         height: 242px;
     }
-
     .card-project-block:hover .card-block {
         height: 243px;
         padding: 80px;
     }
-
     .card-project-block {
         width: auto;
+    }
+    .skill {
+        padding: 8px;
+        margin: 4px;
     }
 }
 
